third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_return.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/invalid_call_lhs_return.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01013]: unsupported language construct
  ┌─ tests/move_check/parser/invalid_call_lhs_return.move:3:9
  │
3 │         (return ())(0, 1);
  │         ^^^^^^^^^^^ Calls through computed functions not supported by this compiler

